src/LandingPage/6.Insights/Insights.scss
@use "../../mixins" as *;

#InsightsMC{
  min-height : 100vh;
  width : 80%;
  background: white;
  display : flex;
  flex-direction : column;
  align-items : center;
  justify-content : center;
  gap : 30px;
  max-width : 1300px;

  
  .iframeElesCon, .blogsEle{
    display : flex;
    flex-direction: column;
    gap : 20px;
    align-items : flex-start;
    h3{
      border-left : 4px solid #E53A36;
      padding-left : 10px;
    }
    
    .itsChild{
      display : grid;
      grid-template-columns : repeat(4, auto);
      gap : 20px;
      
      .blogs{
        border : 1px #F3F4F6 solid;
        border-radius : 20px;
        padding : 10px;
        
        img{
          width : 100%;
          height : 100%;
          object-fit : contain;
        }
      }
      
      .ifEle, .blogs{
        cursor : pointer;
        transition : all 0.2s ease;
        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
        &:hover{
          transform : scale(1.1);
        }
        
        display : grid;
        grid-template-rows : repeat(3,auto);
        align-items : center;
        gap : 10px;
        
        .DateBlog{
          width : 100%;
          display : flex;
          justify-content : space-between;
        }
        
        span{
          text-align : left;
        }
      }
      
      .ifEle{
        width: 100%;
        aspect-ratio: 16 / 9;
        border: none;
        border-radius : 20px;
      }
    }
  }
}



@include mediaDevice(mobile){
  
  #InsightsMC{
    
    width: 100%;
    padding: 20px 0;
    gap: 30px;
    align-items: center;
    
    h1,
    h2,
    h3,
    span{
      width: 100%;
      text-align: left;
    }
    
    .iframeElesCon,
    .blogsEle{
      
      width: 100%;
      gap: 15px;
      
      h3{
        padding-left: 15px;
      }
      
      .itsChild{
        
        display: flex;
        flex-direction: row;
        gap: 18px;
        
        overflow-x: auto;
        overflow-y: hidden;
        
        scroll-snap-type: x mandatory;
        -webkit-overflow-scrolling: touch;
        
        padding: 10px 15px;
        
        &::-webkit-scrollbar{
          display: none;
        }
        
        scrollbar-width: none;
        
        .ifEle,
        .blogs{
          
          flex: 0 0 85%;
          scroll-snap-align: center;
          
          transition: .2s ease;
          
        }
        
        .ifEle{
          
          aspect-ratio: 16/9;
          border-radius: 20px;
        }
        
        .blogs{
          height : 200px;
          width : 50px;
          display: flex;
          flex-direction: column;
          gap: 12px;
          padding: 12px;
          
          img{
            border-radius: 12px;
          }
          
          .DateBlog{
            display: flex;
            justify-content: space-between;
          }
          
          span{
            width: auto;
            text-align: left;
          }
        }
      }
    }
  }
}

